--- a/themes/snow/_variables.scss
+++ b/themes/snow/_variables.scss
@@ -15,6 +15,8 @@ $formulate-blue-l: #f3f4f4;
 
 $formulate-green: #41b883;
 
+$formulate-error: #960505;
+
 $formulate-yellow-d: #6b5900;
 $formulate-yellow: #e6c000;
 $formulate-yellow-l: #fff8d2;
