--- a/themes/snow/_variables.scss
+++ b/themes/snow/_variables.scss
@@ -16,10 +16,13 @@ $formulate-blue-l: #f3f4f4;
 $formulate-green: #41b883;
 
 $formulate-error: #960505;
+$formulate-error-l: #dc2c2c;
 
 $formulate-yellow-d: #6b5900;
 $formulate-yellow: #e6c000;
 $formulate-yellow-l: #fff8d2;
+
+$formulate-white: #ffffff;
 
 
 
