--- a/themes/snow/_variables.scss
+++ b/themes/snow/_variables.scss
@@ -14,6 +14,7 @@ $formulate-dark: #000000;
 $formulate-blue-l: #f3f4f4;
 
 $formulate-green: #41b883;
+$formulate-green-l: #64c89b;
 
 $formulate-error: #960505;
 $formulate-error-l: #dc2c2c;
