Includes support for slider values, custom validation rules and messages

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -57,6 +57,27 @@
       @include baseinput;
     }
 
+    .formulate-input-element--search {
+      position: relative;
+
+      &::before {
+        content: '';
+        width: 2em;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72.99 72.9"><path fill="%23#{str-slice("#{$formulate-gray-ddd}", 2)}" d="M71.77,66,53.87,48.1A29.94,29.94,0,1,0,30,60a29.52,29.52,0,0,0,18.1-6.1l18,17.8A4,4,0,0,0,69,72.9a4.18,4.18,0,0,0,2.9-1.2A4.09,4.09,0,0,0,71.77,66ZM30.07,51.9a21.9,21.9,0,1,1,15.5-37.4A21.37,21.37,0,0,1,52,30a22,22,0,0,1-6.4,15.5A21.54,21.54,0,0,1,30.07,51.9Z"/></svg>');
+        background-size: 1em 1em;
+        background-repeat: no-repeat;
+        background-position: center;
+        pointer-events: none;
+      }
+      input {
+        padding-left: 2em;
+      }
+    }
+
     input[type="color"] {
       height: 1.1em;
       box-sizing: content-box;
@@ -93,6 +114,22 @@
 // -----------------------------------------------------------------------------
 
 &[data-classification='slider'] {
+  .formulate-input-element--range {
+    display: flex;
+    align-items: center;
+  }
+
+  .formulate-input-element-range-value {
+    font-size: .9em;
+    line-height: 1;
+    margin-left: .5em;
+    background-color: $formulate-gray;
+    padding: .25em .3em;
+    border-radius: .25em;
+    color: $formulate-gray-ddd;
+    font-variant-numeric: tabular-nums;
+  }
+
   input {
     appearance: none;
     width: 100%;
