fixes classname typos in snow.css, formulatefiles component, and inputs.scss

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -498,7 +498,7 @@
         }
       }
 
-      .formualte-file-name {
+      .formulate-file-name {
         padding-left: 1.5em;
         padding-right: 2em;
         max-width: 100%;
@@ -553,7 +553,7 @@
         }
 
         &[data-has-preview] {
-          .formualte-file-name {
+          .formulate-file-name {
             &:before {
               display: none;
             }
