--- a/themes/boilerplate/boilerplate.scss
+++ b/themes/boilerplate/boilerplate.scss
@@ -107,3 +107,15 @@
     // image uploads
   }
 }
+
+
+// Form-level errors
+// -----------------------------------------------------------------------------
+
+.formulate-form-errors {
+
+  .formulate-form-error {
+    // form errors (not specific to a field)
+  }
+}
+
