--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -502,6 +502,9 @@
         padding-left: 1.5em;
         padding-right: 2em;
         max-width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         &::before {
           position: absolute;
