Added default font stack to input elements

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -3,6 +3,7 @@
 
 .formulate-input {
   margin-bottom: 1.5em;
+  font-family: $formulate-font-stack;
 
   .formulate-input-label {
     display: block;
