Removes border from slider thumb

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -3,6 +3,7 @@
 
 .formulate-input {
   margin-bottom: 1.5em;
+  font-family: $formulate-font-stack;
 
   .formulate-input-label {
     display: block;
@@ -41,7 +42,16 @@
   }
 
   .formulate-input-group-item {
-    margin-bottom: .5em;
+    margin-bottom: 1.5em;
+    padding: 1.5em;
+    border: 1px solid $formulate-gray;
+    border-radius: .25em;
+
+    &:last-child {
+      margin-bottom: 1.5em;
+      border-bottom: 0;
+      padding-bottom: 0;
+    }
   }
 
   &:last-child {
@@ -156,6 +166,7 @@
       height: 1em;
       border-radius: 1em;
       background-color: $formulate-green;
+      border: 0;
       margin-top: calc(-.5em + 2px);
     }
 
@@ -182,6 +193,10 @@
     }
 
     &::-webkit-slider-runnable-track {
+      @include track;
+    }
+
+    &::-moz-range-track {
       @include track;
     }
   }
@@ -211,6 +226,11 @@
     cursor: pointer;
     display: inline-flex;
     align-items: center;
+
+    &[data-secondary] {
+      background-color: transparent;
+      border: 1px solid $formulate-green;
+    }
 
     &[disabled] {
       background-color: $formulate-gray-d;
