Fixes help text bleeding through on box classification, adds full specimen sheet

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -103,6 +103,7 @@
     input[type="color"] {
       height: 1.1em;
       box-sizing: content-box;
+      width: auto;
 
       @mixin color-swatch {
         display: block;
