Adds an invalid-message prop to FormulateForm, resolves #78

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -235,6 +235,11 @@
     &[disabled] {
       background-color: $formulate-gray-d;
       border-color: $formulate-gray-d;
+
+      &:active {
+        background-color: $formulate-gray-d;
+        border-color: $formulate-gray-d;
+      }
     }
 
     &[data-ghost] {
