Groups at their minimum now onion skin the remove button, resolves #175

--- a/themes/snow/_inputs.scss
+++ b/themes/snow/_inputs.scss
@@ -456,6 +456,11 @@
           overflow: hidden;
           text-indent: -1000px;
 
+          &[data-disabled] {
+            opacity: .2;
+            pointer-events: none;
+          }
+
           &::before,
           &::after {
             content: '';
